# CrowdCollect

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
crowdcollect/: __init__.py  app.py  chat_id.py
crowdcollect/static/: record.js  styles.css
crowdcollect/templates/: base.html  information.html  record.html
scripts/: show_chat_id.py
tests/: test_app.py  test_chat_id.py
